# webhook-listener

./: .gitignore  Cargo.toml  README.md  flake.nix
examples/: config.json  sample_push_event.http  sample_push_event.sh  sample_push_payload.json
nix/: module.nix  package.nix  test-socket-usage.nix
src/: config.rs  main.rs  service.rs  systemd_socket.rs
