[package]
name = "webhook-listener"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
hmac = "0.12.1"
sha2 = "0.10.8"
nix = { version = "0.29.0", features = ["socket", "fs", "ioctl", "process", "net"] }
lazy_static = "1.5.0"
serde = { version = "1.0.210", features = ["serde_derive"] }
serde_json = "1.0.128"
humantime-serde = "1.1.1"
